# monarch-mcp-server

./: .env.example  .gitignore  LICENSE  README.md  debug_server.py  main.py  monarch_http_proxy.py  monarch_mcp_server.py  pyproject.toml  run_server.py  test_api.py
skills/monarch/: SKILL.md
tests/: test_monarch_mcp_server.py
